--- a/templates/visit.html
+++ b/templates/visit.html
@@ -31,8 +31,8 @@
             </div>
 
             <div  class = "column" id = "gameArea" style='float:left; width:75%; margin-left:40px'>               
-                <div id="click-object">
-                    <img src="{{ visiting['sel_template'] }}" id = "click-button" onclick="inc()" alt="click object" height="256em" width="256em">
+                <div id="click-object">                    
+                    <img src="{{ template }}" id = "click-button" onclick="inc()" alt="click object" height="256em" width="256em">
                     <img src="{{ visiting['sel_img'] }}" id = "user-image" height="256em" width="256em"> 
                 </div>
             </div>
