Close nav upon image selection

--- a/templates/game.html
+++ b/templates/game.html
@@ -250,6 +250,8 @@
                     }
                 }
                 sel(type);
+                closeNav5();
+                closeNav6();
             }
 
             function sel(type){
