--- a/static-files-folder/style.css
+++ b/static-files-folder/style.css
@@ -270,28 +270,48 @@ button:hover{
 }
 
 .clear{
-    position:absolute;
+    position:relative;
     visibility: hidden;
     cursor: default;
     color: #000;
-    bottom: -10%;
-    right: 21%;
+    top: 0;
+    right: 10%;
     font-size: 100px;
     font-weight: 500;
 }
 
 .clear-info{
-    position:absolute;
-    top: -70%;
-    right: 120%;
+    position:relative;
+    bottom: 0;
+    right: -7%;
     visibility: hidden;
-    width: 100%;
+    width: 10%;
     background-color: darkcyan;
     color: #fff;
     text-align: center;
     border-radius: 8px;
     padding: 5px 0;
     opacity: .7;
+}
+
+.arrow{
+    position: fixed;
+    cursor: default;
+    visibility: hidden;    
+    bottom:-50px;
+    left:44%;
+    right: 44%;
+    background-color: #fff;
+    border: 1px solid #fff;
+    border-radius: 50px;
+    font-size: 100px;
+    font-weight: 500;
+    color: black;
+}
+
+.arrow:hover{
+    font-weight: 700;
+    color: purple;
 }
 
 #click-object {
