--- a/templates/visit.html
+++ b/templates/visit.html
@@ -33,7 +33,7 @@
             <div  class = "column" id = "gameArea" style='float:left; width:75%; margin-left:40px'>               
                 <div id="click-object">                    
                     <img src="{{ template }}" id = "click-button" onclick="inc()" alt="click object" height="256em" width="256em">
-                    <img src="{{ visiting['sel_img'] }}" id = "user-image" height="256em" width="256em"> 
+                    <img src="{{ image }}" id = "user-image" height="256em" width="256em"> 
                 </div>
             </div>
             <div  class = "column" style='float:left; width:15%; margin-right:0px'>
