--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -1,6 +1,6 @@
 {% extends '_base.html' %}
 {% block content %}
-    <p>See how other players are doing.</p>
+    <p>See how other players are doing. Click their username to visit their page!</p>
     {% if user is defined %}<p>Logged in as:&nbsp<strong>{{user['uname']}}</strong></p>{% endif%}
     <table>
         <tr>
@@ -15,7 +15,7 @@
             <td name = 'number'><strong>{{player['collectibles']}}</strong></td>
             <td name = 'number'><strong>{{player['cps']}}</strong></td>
             {% else %}
-            <td>{{player['uname']}}</td>
+            <td><a class = 'visit-links' href = 'visit/{{player['uname']}}'>{{player['uname']}}</a></td>
             <td name = 'number'>{{player['collectibles']}}</td>
             <td name = 'number'>{{player['cps']}}</td>
             {% endif %}
