--- a/templates/game.html
+++ b/templates/game.html
@@ -212,6 +212,11 @@
                 createTemplateElement(cupcakeList[i],'template-cupcakes');
             }
 
+            let cookieList = getCookies();
+            for(let i = 0; i < cookieList.length; i++){
+                createTemplateElement(cookieList[i], 'template-cookies');
+            }            
+
             sendJsonRequest({'search':search}, '/getAllClaimedImages', function(result, targetUrl, params) {                
                 navCallback(result);
                 return result;
